--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss",
-              "node_modules/@ngneat/hot-toast/src/styles/styles.css"
+              "node_modules/@ngneat/hot-toast/src/styles/styles.css",
             ],
             "scripts": []
           },
@@ -95,8 +94,7 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss"
+              "src/styles.scss",
             ],
             "scripts": []
           }
