--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@ng-icons/core": "^25.1.0",
     "@ng-icons/heroicons": "^25.1.0",
     "@ngneat/hot-toast": "^5.0.2",
+    "@sweetalert2/ngx-sweetalert2": "^12.2.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.22",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
