--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.1.0",
     "@ng-icons/core": "^25.1.0",
     "@ng-icons/heroicons": "^25.1.0",
+    "@ng-icons/tabler-icons": "^25.2.0",
     "@ngneat/hot-toast": "^5.0.2",
     "@ngrx/effects": "^16.2.0",
     "@ngrx/store": "^16.2.0",
